--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-lastfm
-music/music.db
-music/art/
+content/music/lastfm
+content/music/music.db
+content/music/art/
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
