--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "tsc --sourceMap -w & nodemon --delay 500ms --watch bin bin/server.js",
+    "start": "tsc --sourceMap -w & nodemon ./bin/index.js --delay 500ms --watch bin bin/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,6 +16,7 @@
     "apollo-server-express": "^2.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
