--- a/back/package.json
+++ b/back/package.json
@@ -23,6 +23,7 @@
     "graphql-tools": "^7.0.1",
     "helmet": "^4.2.0",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.6",
     "tsc": "^1.20150623.0",
     "typescript": "^4.0.5"
   }
