--- a/code-gen/package.json
+++ b/code-gen/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "graphql-codegen": "^0.4.0"
+    "graphql": "^15.4.0",
+    "graphql-codegen": "^0.4.0",
+    "ts-log": "^2.2.3"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.17.8",
+    "@graphql-codegen/cli": "^1.19.1",
     "@graphql-codegen/typescript": "^1.17.9",
     "@graphql-codegen/typescript-graphql-files-modules": "^1.17.8",
     "@graphql-codegen/typescript-operations": "^1.17.8",
