--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 content/music/lastfm
 content/music/music.db
 content/music/art/
+content/items.db
+**/__pycache__
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
