--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "tsc --sourceMap -w & nodemon ./bin/index.js --delay 500ms --watch bin bin/index.js",
+    "start": "CHOKIDAR_USEPOLLING=true tsc --sourceMap -w & nodemon ./bin/index.js --delay 500ms --watch bin bin/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
