Implemented Back end resolvers & front end structure

--- a/code-gen/codegen.yml
+++ b/code-gen/codegen.yml
@@ -41,6 +41,7 @@ generates:
         InputFlowItem: ../objects/flowItem#IInputFlowItem
         FlowItemconnection: ../objects/flowItemConnection#IFlowItemConnection
         InputFlowItemconnection: ../objects/flowItemConnection#IInputFlowItemConnection
+        SearchItem: ../objects/searchItem#ISearchItem
         Item: ../objects/item#IItem
         InputItem: ../objects/item#IInputItem
         User: ../objects/user#IUser
