--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ content/music/art/
 content/items.db
 **/__pycache__
 
+back/env
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
