--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
     "graphql-tag": "^2.11.0",
     "graphql-tools": "^7.0.1",
     "helmet": "^4.2.0",
+    "mongodb": "^3.6.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "tsc": "^1.20150623.0",
