--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/mongodb": "^3.5.33",
     "@types/morgan": "^1.9.2",
     "@types/node-fetch": "^2.5.7",
     "apollo-server-express": "^2.19.0",
