--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ content/items.db
 
 back/env
 
+/.idea
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
