--- a/front/package.json
+++ b/front/package.json
@@ -12,10 +12,12 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "graphql": "^15.4.0",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "react-spring": "^8.0.27",
+    "react-use": "^15.3.4",
     "react-use-gesture": "^8.0.1",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
