--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.9",
     "graphql": "^15.4.0",
     "immutability-helper": "^3.1.1",
+    "node-sass": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
