--- a/front/package.json
+++ b/front/package.json
@@ -10,14 +10,16 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.19.4",
     "@types/react": "^16.9.56",
+    "@types/react-autosuggest": "^10.0.1",
     "@types/react-dom": "^16.9.9",
     "graphql": "^15.4.0",
     "immutability-helper": "^3.1.1",
     "node-sass": "^4.0.0",
     "react": "^17.0.1",
+    "react-autosuggest": "^10.0.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "react-spring": "^8.0.27",
+    "react-spring": "^9.0.0-rc.3",
     "react-use": "^15.3.4",
     "react-use-gesture": "^8.0.1",
     "typescript": "^4.0.5",
